--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,33 @@
 *.exe
 *.out
 *.app
+#include <iostream>
+#include<algorithm>
+#include<string>  
+ 
+using namespace std;
+int main()
+{
+	string s,s2;
+	cin >> s>>s2;
+	int n = s.size()-1;
+	int n2 = s2.size()-1;
+	bool found = false;
+	if (n!= n2) {
+		cout << "NO";
+	}
+	else {
+		for (int i = 0; i <=n; i++) {
+			if (s[i] != s2[n2 - i]) {
+				found = true;
+				break;
+			 }
+		}
+		if (found)
+			cout << "NO";
+		else
+			cout << "YES";
+	}
+	
+	return 0;
+}
